# scripts

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yml
src/: backup.py  postprocess_midi.py  rename_photos.py
src/stupid_backup/: __init__.py  __main__.py  backup.py  config.py  main.py
